...
        <variable name="record" type="com.google.resumemaker.entity.BaseRecord" />
        <variable name="mode" type="com.google.resumemaker.ui.records.RecordFragmentMode" />
        <variable name="fragment" type="com.google.resumemaker.ui.records.ModifyRecordFragment" />
    </data>

    <ScrollView
        android:id="@+id/scroll_modify_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/edit_record_wrapper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_15dp"
            tools:context=".ui.profile.EditProfileFragment">

...
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        app:error="@{record.header == null ? @string/data_not_set : null}"
                        android:text="@={record.header}"/>
...
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descr_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descr_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        app:error="@{record.description == null ? @string/data_not_set : null}"
                        android:text="@={record.description}"/>
...
                    android:id="@+id/achievement_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/achievement_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={record.achievementLevel}"/>

                </com.google.android.material.textfield.TextInputLayout>
...
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/company_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/company_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        app:error="@{record.organizationName == null ? @string/data_not_set : null}"
                        android:text="@={record.organizationName}"/>
...
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/faculty_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/faculty_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:text="@={record.facultyName}"/>
                </com.google.android.material.textfield.TextInputLayout>
...
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/location_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/location_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:text="@={record.location}"/>
                </com.google.android.material.textfield.TextInputLayout>
...
                        app:error="@{record.achievementLevel == null ? @string/data_not_set : null}"
                        android:text="@={record.startDateText}"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/set_start_button"
                android:tag="@string/start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_new_date"
                android:onClick="@{(view) -> fragment.onSelectNewDateClick(view)}"/>

...
                        android:enabled="false"
                        android:text="@={record.endDateText}"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/set_end_button"
                android:tag="@string/end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_new_date"
                android:onClick="@{(view) -> fragment.onSelectNewDateClick(view)}"/>

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/save_record_button"
                    android:tag="@string/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_5dp"
                    android:onClick="@{(view) -> fragment.onEditFormButtonClick(view)}"
                    android:src="@drawable/ic_save"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/cancel_edit_record_button"
                    android:tag="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_5dp"
                    android:onClick="@{(view) -> fragment.onEditFormButtonClick(view)}"
                    android:src="@drawable/ic_cancel"/>
...
