<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable name="record" type="com.google.resumemaker.entity.BaseRecord" />
        <variable name="mode" type="com.google.resumemaker.ui.records.RecordFragmentMode" />
        <variable name="fragment" type="com.google.resumemaker.ui.records.ViewRecordFragment" />
    </data>

    <FrameLayout
        android:id="@+id/view_record_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_record_button"
            android:tag="@string/edit"
            android:layout_gravity="end|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_15dp"
            android:onClick="@{(view) -> fragment.onEditButtonClick()}"
            android:src="@drawable/ic_edit"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_record_button"
            android:tag="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_15dp"
            android:layout_gravity="end"
            android:onClick="@{(view) -> fragment.oDeleteButtonClick()}"
            android:src="@drawable/ic_remove"/>

        <ScrollView
            android:id="@+id/view_record_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/view_record_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/title_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginBottom="@dimen/margin_5dp"
                            android:text="@{mode.titleHeader}"
                            android:textStyle="bold"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/title_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{record.header != null ? record.header : @string/data_not_set}"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/company_name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/company_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginBottom="@dimen/margin_5dp"
                            android:text="@{mode.organizationHeader}"
                            android:textStyle="bold"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/company_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{record.organizationName != null ? record.organizationName : @string/data_not_set}"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/faculty_name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="@{mode.showFaculty ? View.VISIBLE : View.GONE}"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/faculty_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginBottom="@dimen/margin_5dp"
                            android:text="@string/faculty_name"
                            android:textStyle="bold"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/faculty_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{record.facultyName != null ? record.facultyName : @string/data_not_set}"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/achievements_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/achievements_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginBottom="@dimen/margin_5dp"
                            android:text="@{mode.achievementLevelHeader}"
                            android:textStyle="bold"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/achievements_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{record.achievementLevel != null ? record.achievementLevel : @string/data_not_set}"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/description_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/descr_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginBottom="@dimen/margin_5dp"
                            android:text="@string/description"
                            android:textStyle="bold"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/descript_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{record.description != null ? record.achievementLevel : @string/data_not_set}"
                            android:textSize="16sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/location_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/location_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginBottom="@dimen/margin_5dp"
                            android:text="@string/location"
                            android:textStyle="bold"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/location_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{record.location != null ? record.location : @string/data_not_set}"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/start_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/start_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginBottom="@dimen/margin_5dp"
                            android:text="@string/start_date"
                            android:textStyle="bold"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/start_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{record.startDate != null ? record.startDateText : @string/data_not_set}"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/end_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/end_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:layout_marginBottom="@dimen/margin_5dp"
                            android:text="@string/end_date"
                            android:textStyle="bold"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/end_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{record.endDate != null ? record.endDateText : @string/now}"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </ScrollView>
    </FrameLayout>
</layout>