<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable name="fragment" type="com.google.resumemaker.ui.records.RecordsFragment" />
        <variable name="mode" type="com.google.resumemaker.ui.records.RecordFragmentMode" />
        <variable name="recordsExist" type="Boolean" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_record_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_add"
            android:onClick="@{(view) -> fragment.onAddButtonClick()}"
            android:layout_margin="@dimen/margin_10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:visibility="@{recordsExist ? View.GONE : View.VISIBLE}"
            android:text="@string/no_records_found"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_15dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/records_recycler_view"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>
</layout>