...
        <item
            android:id="@+id/nav_positions"
            android:icon="@drawable/ic_positions"
            android:contentDescription="@string/menu_position"
            android:title="@string/menu_position" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_edu"
            android:contentDescription="@string/menu_education"
            android:title="@string/menu_education" />

    </group>

...
